{
    "name": "InputPlayer",
    "maps": [
        {
            "name": "CharacterControls",
            "id": "952b3276-4bab-4032-8dae-fc7c9ad7b245",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "17b2cfe1-f4f3-40d3-b03e-5287d677c8c2",
                    "expectedControlType": "Stick",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "CameraMove",
                    "type": "Value",
                    "id": "1d08986c-adfb-4c61-b723-fc08059f7677",
                    "expectedControlType": "Stick",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "549e5812-1f34-4ffb-a003-8de8fbb8746d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Run",
                    "type": "Button",
                    "id": "54bb350a-b19e-48ce-bd5c-d34b1f27352e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Aim",
                    "type": "Button",
                    "id": "da71ba83-fb7a-432d-9d9c-b7116ef50d2c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Shoot",
                    "type": "Button",
                    "id": "25265aad-fffe-4746-b2aa-947a0a90925b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "InputNumbers",
                    "type": "Button",
                    "id": "d02d5400-2ca7-4295-820e-bf1cd4718105",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "Keyboard",
                    "id": "3f5df0bd-d668-419e-902e-7ad230567837",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "ee59b34f-9555-4a47-a3ef-7196425fc4c3",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard and mouse",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "c1dca4de-c16f-42ea-82c0-1a7adca8de21",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard and mouse",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "bd55879f-3382-416f-b5e4-35e29b0c3e97",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard and mouse",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "8e027336-6de6-46ab-af58-c774322a26d2",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard and mouse",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "47670fc9-bd2b-4b7e-9450-938e777b08d6",
                    "path": "<Joystick>/stick",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "Gamepad",
                    "id": "bee3a2fc-6c89-404d-9c1b-b4b95b698c91",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "c9c0a6a2-140a-4d9f-864d-514c90291474",
                    "path": "<HID::DragonRise Inc.   Generic   USB  Joystick  >/hat/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "3eb9d3b7-7587-4556-9e71-5dbdc70e0012",
                    "path": "<HID::DragonRise Inc.   Generic   USB  Joystick  >/hat/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "7fdff3c5-1013-4a6a-8f97-b77ab79171a1",
                    "path": "<HID::DragonRise Inc.   Generic   USB  Joystick  >/hat/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "80dc6517-6a5d-41a6-ab61-00d67d688d8e",
                    "path": "<HID::DragonRise Inc.   Generic   USB  Joystick  >/hat/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "ArrowsKeyboard",
                    "id": "2d933d85-3b65-46a5-9347-8c7668d07fa3",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CameraMove",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "381418e3-e4b0-4558-a694-6fb66ef03515",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard and mouse",
                    "action": "CameraMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "90d9f2d3-3f69-49a0-b487-aede5ed6fbc3",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard and mouse",
                    "action": "CameraMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "b0f68c96-13ac-469e-927e-fe64b8b3615c",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard and mouse",
                    "action": "CameraMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "5cef93c1-d172-41b8-8bef-bbbc8b340471",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard and mouse",
                    "action": "CameraMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "782dae90-3cfa-4dba-aa83-e6532ab14de5",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard and mouse",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7cd7a05d-0d5d-4294-95fd-18bb607430b7",
                    "path": "<HID::DragonRise Inc.   Generic   USB  Joystick  >/button3",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "43ee7eac-cd17-4cf0-be75-784cc4fc1646",
                    "path": "<Keyboard>/leftShift",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard and mouse",
                    "action": "Run",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4272edce-cda4-451c-aaee-6538ef98a7f0",
                    "path": "<HID::DragonRise Inc.   Generic   USB  Joystick  >/button5",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Run",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7866b39c-b1cb-4201-8e20-fe863d4ad5fc",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard and mouse",
                    "action": "Aim",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "73c94c6d-8c60-48b8-bcfc-017294e44672",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard and mouse",
                    "action": "Shoot",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3fbe0b05-dfa6-456f-a8b3-962769b2f55a",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "Scale(factor=0)",
                    "groups": "Keyboard and mouse",
                    "action": "InputNumbers",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "52f35000-5be4-47e7-a9d8-c698888bc20b",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "Scale",
                    "groups": "Keyboard and mouse",
                    "action": "InputNumbers",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e9ecbaf5-aee6-44d8-93fc-068f5500b5c0",
                    "path": "<Keyboard>/3",
                    "interactions": "",
                    "processors": "Scale(factor=2)",
                    "groups": "Keyboard and mouse",
                    "action": "InputNumbers",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c22af116-86d4-49c6-970c-2370db37395a",
                    "path": "<Keyboard>/4",
                    "interactions": "",
                    "processors": "Scale(factor=3)",
                    "groups": "Keyboard and mouse",
                    "action": "InputNumbers",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0bca1152-0c82-4707-9469-adcef2ddd27e",
                    "path": "<Keyboard>/numpad1",
                    "interactions": "",
                    "processors": "Scale(factor=0)",
                    "groups": "Keyboard and mouse",
                    "action": "InputNumbers",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d7c754e1-f0f1-4195-a08f-e6a2434e9af0",
                    "path": "<Keyboard>/numpad2",
                    "interactions": "",
                    "processors": "Scale",
                    "groups": "Keyboard and mouse",
                    "action": "InputNumbers",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d175b001-0580-477e-aee9-8a6a197f0e98",
                    "path": "<Keyboard>/numpad3",
                    "interactions": "",
                    "processors": "Scale(factor=2)",
                    "groups": "Keyboard and mouse",
                    "action": "InputNumbers",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7bc897c1-aa29-4fa2-8d66-8d5bcecd4a71",
                    "path": "<Keyboard>/numpad4",
                    "interactions": "",
                    "processors": "Scale(factor=3)",
                    "groups": "Keyboard and mouse",
                    "action": "InputNumbers",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Keyboard and mouse",
            "bindingGroup": "Keyboard and mouse",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Gamepad",
            "bindingGroup": "Gamepad",
            "devices": [
                {
                    "devicePath": "<Gamepad>",
                    "isOptional": true,
                    "isOR": false
                }
            ]
        }
    ]
}